[metadata]
name = pp-user-client
version = 1.0.2.2dev
description = User Service client library
author = Oisin Mulvihill
author_email = everyone@pythonpro.co.uk
keywords = 
classifiers = 
	Topic :: Software Development :: Libraries
install_requires = 
	# Runtime dependencies
	evasion-common
	requests
	cmdln
	pp-user-validate
setup_requires = 
	# Setup dependencies, usually empty.
tests_require = 
	# Testing dependencies
	pytest-cov
console_scripts = 
	user.client = pp.user.client.scripts.app:main

[upload_docs]
upload-dir = build/sphinx/html
show-response = 1

[pytest]
norecursedirs = .hg *.egg build dist

