[metadata]
name = pp-user-model
version = 1.0.0
description =  User Service model package
author =  Oisin Mulvihill
author_email = everyone@pythonpro.co.uk
keywords =

classifiers =
    Topic :: Software Development :: Libraries


install_requires =
    evasion-common==1.0.2
    pymongo==2.3
    requests
    cmdln

setup_requires =
    # Setup dependencies, usually empty.

tests_require =
    # Testing dependencies
    pytest
    pytest-cov

console_scripts =
    user-model = pp.user.model.scripts.app:main

[egg_info]
# This adds the 'dev' marker to versions.
# This must conform to PEP-386:
# http://www.python.org/dev/peps/pep-0386/#the-new-versioning-algorithm
tag_build = .dev1

[upload_docs]
upload-dir = build/sphinx/html
show-response = 1

[pytest]
# This section sets configuration for all invocations of py.test,
# both standalone cmdline and running via setup.py
norecursedirs = .hg *.egg build dist
