[metadata]
name = pp-user-validate
version = 1.0.2.3dev
description = User Service validators
author = Oisin Mulvihill
author_email = everyone@pythonpro.co.uk
keywords = 
classifiers = 
	Topic :: Software Development :: Libraries
install_requires = 
	# Runtime dependencies
	# acme.foo
	# numpy
setup_requires = 
	# Setup dependencies, usually empty.
tests_require = 
	# Testing dependencies
	pytest-cov
console_scripts = 
	user-validate = pp.user.validate.scripts.app:main

[upload_docs]
upload-dir = build/sphinx/html
show-response = 1

[pytest]
norecursedirs = .hg *.egg build dist

