[metadata]
name = pp-user-model
version = 1.0.2.5dev
description = User Service model package
author = Oisin Mulvihill
author_email = everyone@pythonpro.co.uk
keywords =
classifiers =
	Topic :: Software Development :: Libraries
install_requires =
	evasion-common
	pymongo
	requests
	cmdln
	pp-apiaccesstoken
	pp-user-validate
setup_requires =
	# Setup dependencies, usually empty.
tests_require =
	# Testing dependencies
	pytest
	pytest-cov
console_scripts =
	user-model = pp.user.model.scripts.app:main

[upload_docs]
upload-dir = build/sphinx/html
show-response = 1

[pytest]
norecursedirs = .hg *.egg build dist

