[metadata]
name = pp-user-service
version = 1.0.2.4dev
description = User Service
author = Oisin Mulvihill
author_email = everyone@pythonpro.co.uk
keywords = 
classifiers = 
	Programming Language :: Python
	Framework :: Pylons
	Topic :: Internet :: WWW/HTTP
	Topic :: Internet :: WWW/HTTP :: WSGI :: Application
install_requires = 
	pp-auth
	pp-web-base
	pp-user-model
	pp-user-validate
	pp-user-client
setup_requires = 
	# Setup dependencies, usually empty.
tests_require = 
	# Testing dependencies
	pytest-cov
	pp-testing
console_scripts = 

[upload_docs]
upload-dir = build/sphinx/html
show-response = 1

[pytest]
norecursedirs = .hg *.egg build dist

